{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 27,
  "lineage": "213c0584-966e-3420-8e53-b8edac5764cb",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:network-acl/acl-04985f8618afa743e",
            "default_network_acl_id": "acl-04985f8618afa743e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04985f8618afa743e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "755366792200",
            "subnet_ids": [
              "subnet-039f9ebfe6390a3c9",
              "subnet-07fdf56e6ecb7df32",
              "subnet-0c102a9d44c52581e",
              "subnet-0d85179123c02afa6",
              "subnet-0f2f09bb99dbfe697",
              "subnet-0fa194baa1141a746"
            ],
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-default"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-default"
            },
            "vpc_id": "vpc-0882261f9c00b7440"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:route-table/rtb-0c20b1e4318f11bd3",
            "default_route_table_id": "rtb-0c20b1e4318f11bd3",
            "id": "rtb-0c20b1e4318f11bd3",
            "owner_id": "755366792200",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-default"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0882261f9c00b7440"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:security-group/sg-07af746c6720e7b5c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07af746c6720e7b5c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "755366792200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-default"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-default"
            },
            "vpc_id": "vpc-0882261f9c00b7440"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fd2f544ac0c4a11",
            "domain": "vpc",
            "id": "eipalloc-09fd2f544ac0c4a11",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-84-228-233.us-west-2.compute.amazonaws.com",
            "public_ip": "35.84.228.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:internet-gateway/igw-05ad6f987fcce8a77",
            "id": "igw-05ad6f987fcce8a77",
            "owner_id": "755366792200",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint"
            },
            "vpc_id": "vpc-0882261f9c00b7440"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fd2f544ac0c4a11",
            "association_id": "eipassoc-03945c70ad6fa35ad",
            "connectivity_type": "public",
            "id": "nat-0011abc221496d7bb",
            "network_interface_id": "eni-0cd50326330fde63a",
            "private_ip": "10.0.3.229",
            "public_ip": "35.84.228.233",
            "subnet_id": "subnet-039f9ebfe6390a3c9",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-us-west-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0592b4fd7307dd7d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0011abc221496d7bb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0592b4fd7307dd7d5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05ad6f987fcce8a77",
            "id": "r-rtb-0151f88f8637397761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0151f88f863739776",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:route-table/rtb-0592b4fd7307dd7d5",
            "id": "rtb-0592b4fd7307dd7d5",
            "owner_id": "755366792200",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-private"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0882261f9c00b7440"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:route-table/rtb-0151f88f863739776",
            "id": "rtb-0151f88f863739776",
            "owner_id": "755366792200",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-public"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0882261f9c00b7440"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055a770b9be54210c",
            "route_table_id": "rtb-0592b4fd7307dd7d5",
            "subnet_id": "subnet-0d85179123c02afa6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d6ad94885f6334f",
            "route_table_id": "rtb-0592b4fd7307dd7d5",
            "subnet_id": "subnet-0f2f09bb99dbfe697"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a56fcf62d3d4f15",
            "route_table_id": "rtb-0592b4fd7307dd7d5",
            "subnet_id": "subnet-07fdf56e6ecb7df32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c3471d1ab8e591f",
            "route_table_id": "rtb-0151f88f863739776",
            "subnet_id": "subnet-039f9ebfe6390a3c9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015df75ee6c524d38",
            "route_table_id": "rtb-0151f88f863739776",
            "subnet_id": "subnet-0c102a9d44c52581e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0725fb82ce65861f0",
            "route_table_id": "rtb-0151f88f863739776",
            "subnet_id": "subnet-0fa194baa1141a746"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:subnet/subnet-0d85179123c02afa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.40.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d85179123c02afa6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755366792200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-private-us-west-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-private-us-west-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0882261f9c00b7440"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:subnet/subnet-0f2f09bb99dbfe697",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.44.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2f09bb99dbfe697",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755366792200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-private-us-west-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-private-us-west-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0882261f9c00b7440"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:subnet/subnet-07fdf56e6ecb7df32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.48.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fdf56e6ecb7df32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755366792200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-private-us-west-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-private-us-west-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0882261f9c00b7440"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:subnet/subnet-039f9ebfe6390a3c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039f9ebfe6390a3c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755366792200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0882261f9c00b7440"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:subnet/subnet-0c102a9d44c52581e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c102a9d44c52581e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755366792200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0882261f9c00b7440"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:subnet/subnet-0fa194baa1141a746",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa194baa1141a746",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755366792200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-public-us-west-2c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-public-us-west-2c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0882261f9c00b7440"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:755366792200:vpc/vpc-0882261f9c00b7440",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04985f8618afa743e",
            "default_route_table_id": "rtb-0c20b1e4318f11bd3",
            "default_security_group_id": "sg-07af746c6720e7b5c",
            "dhcp_options_id": "dopt-07f445133dfc305bf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0882261f9c00b7440",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c20b1e4318f11bd3",
            "owner_id": "755366792200",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint"
            }
          }
        }
      ]
    }
  ]
}